--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
   },
   "homepage": "https://github.com/Votchitsev/ahj-homeworks-sse-ws-backend#readme",
   "dependencies": {
-    "@koa/router": "^12.0.0",
-    "koa": "^2.13.4",
-    "koa-combine-routers": "^4.0.2",
-    "koa-routing": "^1.3.1",
     "ws": "^8.8.1"
   },
   "devDependencies": {
@@ -31,7 +27,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
-    "nodemon": "^2.0.19",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "nodemon": "^2.0.19"
   }
 }
